#AWW-309 (Fix word wrapping)

--- a/src/containers/app/scss/global.scss
+++ b/src/containers/app/scss/global.scss
@@ -530,6 +530,11 @@ input {
 			padding-top: 0;
 		}
 	}
+	&.nowrap {
+		p {
+			word-break: normal;
+		}
+	}
 	p {
 		word-wrap: break-word;
 		word-break: break-all;
